Updated introtext and footer from the team.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,22 +4,40 @@
   <section>
     <h1>SENIE</h1>
     <div>
-      <p>
-        <strong>Laipni lūdzam!</strong> 2003. gadā tika atklāta latviešu valodas seno tekstu korpusa mājas
-        lapa. Tagad te atradīsiet gan 16. gs., gan 17. gs., gan arī dažus 18. gs. sākuma latviešu rakstu
-        pieminekļus un to indeksus.
+    
+      <p><strong>Laipni lūdzam!</strong>
       </p>
-      <p>
-        Senie teksti elektroniskā veidā ir pieejami un brīvi izmantojami pētnieciskiem mērķiem, pateicoties
-        90. gadu vidū saņemtajam Sorosa fonda &ndash; Latvija atbalstam, 2002. gadā piešķirtajam
-        Kultūrkapitāla fonda un LU finansējumam, kā arī Izglītības un zinātnes ministrijas finansējumam 2003.
-        gadā. 2004. gadā, izmantojot  VKKF piešķirto radošo stipendiju, seno tekstu korpuss tika papildināts
-        ar vēl diviem avotiem.
-      </p>
-      <p>
-        Latviešu valodas seno tekstu uzkrāšanu un apstrādi nodrošina LU Filoloģijas fakultātes Baltu valodu
-        katedra un LU Matemātikas un informātikas institūta Mākslīgā intelekta laboratorija.
-      </p>
+      <p>Latviešu valodas seno tekstu korpusa mājaslapa SENIE tika atklāta 2003.&nbsp;gadā.
+        2025.&nbsp;gada beigās korpusā pētnieciskiem mērķiem brīvi izmantojami ir jau aptuveni 100
+		16.&ndash;18. gadsimta avotu un to indeksu, lielākajai daļa avotu ir pievienoti arī faksimili.
+	  </p>
+      <p>Korpusa datu sagatavošana jau 20.&nbsp;gadsimta 90.&nbsp;gados notika, pateicoties Sorosa
+	    fonda&nbsp;&ndash; Latvija atbalstam, 21.&nbsp;gadsimta sākumā korpuss tika publicēts un papildināts
+		ar Valsts kultūrkapitāla fonda (2002, 2004), LU (2002) un Izglītības un zinātnes ministrijas (2003)
+		atbalstu.
+	  </p>
+      <p>Lielākais avotu papildinājums notika FLPP projekta laikā (2013–2016), taču korpusa papildināšana ar
+	    jauniem avotiem līdz šim brīdim turpinājusies arī vairāku VPP laikā.
+	  </p>
+	  <p>2017.&nbsp;gadā ar LU Attīstības projekta atbalstu korpuss tika pārveidots <em>Unicode</em> formātā,
+	    tā paverot iespēju skaidrāk un precīzāk attēlot avotos izmantoto simbolu daudzveidību.
+	  </p>
+      <p>2022.&nbsp;gadā, korpusu modernizējot, tā dati tika publicēti Nacionālo korpusu kolekcijā 
+	    <a href="https://korpuss.lv/" target="_blank">korpuss.lv</a> un indeksēti _NoSketch Engine_ platformā.
+	    Šobrīd meklēšana &ndash; gan vēsturiskajā, gan mūsdienu rakstībā &ndash; ir iespējama korpusa modernizētajā 
+		<a href="https://nosketch.korpuss.lv/#dashboard?corpname=senie_unicode" target="_blank">variantā</a>,
+		savukārt šī vietne kalpo kā latviešu seno tekstu bibliotēka, ļaujot pārskatīt pilnus avotu tekstus un
+		faksimilus. No 2025.&nbsp;gadā arī visi šīs vietnes teksti ir lasāmi tikai <em>Unicode</em> kodējumā.
+		No 2020. līdz 2025.&nbsp;gadam darbi pie korpusa notikuši ar VPP DH, VPP Letonika, VPP DHELI un
+		projekta “Valodu tehnoloģiju iniciatīva” atbalstu.
+	  </p>
+      <p>Latviešu valodas seno tekstu uzkrāšanu un apstrādi nodrošina LU Matemātikas un informātikas institūta
+        Mākslīgā intelekta laboratorija un LU HZF Latviešu valodas institūts.</p>
+      <p>Mūsu atbalstītāji cauri laiku lokiem: Sorosa fonds&nbsp;&ndash; Latvija; Valsts kultūrkapitāla fonds;
+        LU; Izglītības un zinātnes ministrija; FLPP, Nr. 212/2012; AAP2017/63; AAP2019/16; VPP-IZM-2018/2-0002;
+		VPP-IZM-DH-2020/1-0001; VPP-LETONIKA-2021/4-0003; VPP-IZM-DH-2022/1-0002; 2.3.1.1.i.0/1/22/I/CFLA/002.
+	  </p>
+
     </div>
   </section>
   <section th:each="century : ${booksByCentury}">
