--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,8 +22,8 @@
 
 <footer>
   <div>&copy; LU Matemātikas un informātikas institūta Mākslīgā intelekta laboratorija</div>
+  <div>&copy; LU Humanitāro zinātņu fakultātes Latviešu valodas institūts</div>
   <div>&copy; LU Humanitāro zinātņu fakultātes Baltu valodu katedra</div>
-  <div>&copy; LU Latviešu valodas institūts</div>
   <div th:text="|2002-${T(java.time.Year).now()}|">2002-2025</div>
 </footer>
 
