--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -2,6 +2,20 @@ nav.books, nav.pages, #pageContent {
     display: flex;
 }
 
-form.books, form.pages {
+form.books, form.pages, #pageContent {
     white-space: nowrap;
+}
+
+#pageContent {
+    align-items: start;
+    & td {
+        vertical-align: top;
+    }
+    & > div {
+        & > img {
+            width: 100%;
+            height: 100%;
+            max-height: 720px;
+        }
+    }
 }
