--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -31,23 +31,25 @@
         <label for="pageSelector">Lappuse:</label>
         <form action="/goto" th:if="${prevPage} != null">
           <input type="hidden" name="source" th:value="${currentBook.fullSource}"/>
-          <input type="submit" name="page" th:value="${prevPage.name}">
+          <input type="hidden" name="page" th:value="${prevPage.linkName}">
+          <button th:text="${prevPage.displayName}"></button>
         </form>
         <form action="/goto" class="pages">
           <input type="hidden" name="source" th:value="${currentBook.fullSource}"/>
           <select id="pageSelector" name="page">
             <option
               th:each="page : ${pages}"
-              th:value="${page.name}"
+              th:value="${page.linkName}"
               th:text="${page.displayName}"
-              th:selected="${page.name} == ${currentPage.name}"
+              th:selected="${page.linkName} == ${currentPage.linkName}"
             ></option>
           </select>
           <button type="submit">Atvērt</button>
         </form>
         <form action="/goto" th:if="${nextPage} != null">
           <input type="hidden" name="source" th:value="${currentBook.fullSource}"/>
-          <input type="submit" name="page" th:value="${nextPage.name}">
+          <input type="hidden" name="page" th:value="${nextPage.linkName}">
+          <button th:text="${nextPage.displayName}"></button>
         </form>
       </nav>
 
