Useful info in first page + symbol tables.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,22 +22,48 @@
 	  <p>2017.&nbsp;gadā ar LU Attīstības projekta atbalstu korpuss tika pārveidots <em>Unicode</em> formātā,
 	    tā paverot iespēju skaidrāk un precīzāk attēlot avotos izmantoto simbolu daudzveidību.
 	  </p>
-      <p>2022.&nbsp;gadā, korpusu modernizējot, tā dati tika publicēti Nacionālo korpusu kolekcijā 
+      <p>2022.&nbsp;gadā, korpusu modernizējot, tā dati tika publicēti Nacionālo korpusu kolekcijā (NKK)
 	    <a href="https://korpuss.lv/" target="_blank">korpuss.lv</a> un indeksēti _NoSketch Engine_ platformā.
-	    Šobrīd meklēšana &ndash; gan vēsturiskajā, gan mūsdienu rakstībā &ndash; ir iespējama korpusa modernizētajā 
-		<a href="https://nosketch.korpuss.lv/#dashboard?corpname=senie_unicode" target="_blank">variantā</a>,
+	    Tajā meklēšana ir iespējama gan vēsturiskajā, gan mūsdienu rakstībā,
 		savukārt šī vietne kalpo kā latviešu seno tekstu bibliotēka, ļaujot pārskatīt pilnus avotu tekstus un
 		faksimilus. No 2025.&nbsp;gadā arī visi šīs vietnes teksti ir lasāmi tikai <em>Unicode</em> kodējumā.
 		No 2020. līdz 2025.&nbsp;gadam darbi pie korpusa notikuši ar VPP DH, VPP Letonika, VPP DHELI un
 		projekta “Valodu tehnoloģiju iniciatīva” atbalstu.
 	  </p>
       <p>Latviešu valodas seno tekstu uzkrāšanu un apstrādi nodrošina LU Matemātikas un informātikas institūta
-        Mākslīgā intelekta laboratorija un LU HZF Latviešu valodas institūts.</p>
+        Mākslīgā intelekta laboratorija un LU HZF Latviešu valodas institūts.
+      </p>
       <p>Mūsu atbalstītāji cauri laiku lokiem: Sorosa fonds&nbsp;&ndash; Latvija; Valsts kultūrkapitāla fonds;
         LU; Izglītības un zinātnes ministrija; FLPP, Nr. 212/2012; AAP2017/63; AAP2019/16; VPP-IZM-2018/2-0002;
 		VPP-IZM-DH-2020/1-0001; VPP-LETONIKA-2021/4-0003; VPP-IZM-DH-2022/1-0002; 2.3.1.1.i.0/1/22/I/CFLA/002.
 	  </p>
-
+    </div>
+  </section>
+  <section>
+    <h1>Noderīgi</h1>
+    <div>
+      <ul>
+        <li>
+          <strong>NKK</strong>:
+          <a href="https://korpuss.lv/id/Senie" target="_blank">korpusa ieraksts</a>.
+        </li>
+        <li>
+          <strong>Meklēšana korpusā</strong>:
+          <a href="https://nosketch.korpuss.lv/#dashboard?corpname=senie_unicode" target="_blank">šeit</a>.
+        </li>
+        <li>
+          <strong>Datu lejuplāde</strong>:
+          <a href="http://hdl.handle.net/20.500.12574/90" target="_blank">CLARIN-LV repozitorijā</a>.
+          <!-- TODO: atjaunināt, tiklīdz būs šī gada saite! -->
+        </li>
+        <li>
+          <strong>Izmantoto simbolu saraksti</strong>: <a href="/html/unicode.htm">pamata</a>,
+          <a href="/html/unicode_full.htm">ar avotiem</a>.
+        </li>
+        <li>
+          <strong>Saziņa</strong>: <a href="mailto:senie@korpuss.lv">senie@korpuss.lv</a>.
+        </li>
+      </ul>
     </div>
   </section>
   <section th:each="century : ${booksByCentury}">
