--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,8 +57,8 @@
           <!-- TODO: atjaunināt, tiklīdz būs šī gada saite! -->
         </li>
         <li>
-          <strong>Izmantoto simbolu saraksti</strong>: <a href="/html/unicode.htm">pamata</a>,
-          <a href="/html/unicode_full.htm">ar avotiem</a>.
+          <strong>Izmantoto simbolu saraksti</strong>: <a href="/symbols">pamata</a>,
+          <a href="/symbols_full">ar avotiem</a>.
         </li>
         <li>
           <strong>Saziņa</strong>: <a href="mailto:senie@korpuss.lv">senie@korpuss.lv</a>.
