--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/css/fonts.css">
   <link rel="stylesheet" href="/css/page.css">
   <link rel="stylesheet" href="/css/book.css">
+  <link rel="stylesheet" href="/css/symbols.css">
   <style>
     #banner { width: 600px; height: 75px; }
   </style>
