Links are not blue, addreses and book names get special font.

--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -39,6 +39,15 @@ section {
     }
 }
 
+a {
+  color: #283d14;
+}
+
+a:visited {
+  color: #141e0a;
+}
+
+
 .address {
     font-family: "Libertinus Sans", sans-serif;
     font-stretch: condensed;
