--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -57,7 +57,7 @@
       <div id="pageContent">
         <table>
           <tr th:each="line : ${lines}">
-            <td th:text="${line.address}">Ab1234_BC_--_1</td>
+            <td th:text="${line.address}" class="address">Ab1234_BC_--_1</td>
             <td>[(${line.dataHtml})]</td>
           </tr>
         </table>
