--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -66,3 +66,9 @@ footer
     padding-top: 1em;
     padding-bottom: 1em;
 }
+
+td.index-booksep
+{
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
