--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,8 @@
     <table>
       <tr th:each="book: ${century.value}">
         <td class="address"><a href="/books/Ab1234_BC" th:href="${book.urlPath}" th:text="${book.displayCode}">Ab1234_BC</a></td>
-        <td th:text="|- ${book.name}|">- Valpurģu nakts</td>
+        <td class="index-booksep">—</td>
+        <td th:text="${book.name}">Valpurģu nakts</td>
       </tr>
     </table>
   </section>
