--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -32,6 +32,7 @@ section {
 
     & h1 {
         font-size: 160%;
+        font-family: "Libertinus Sans", sans-serif;
         background-color: #669933;
         margin: 0;
         color: var(--bgcolor);
@@ -55,7 +56,7 @@ a:visited {
 
 .extra-small
 {
-    font-size:smaller;
+    font-size:75%;
 }
 
 footer
