--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Senie</title>
-  <link rel="stylesheet" href="/css/fonts.css">
   <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="/css/fonts.css">
   <link rel="stylesheet" href="/css/book.css">
+  <link rel="stylesheet" href="/css/index.css">
   <link rel="stylesheet" href="/css/symbols.css">
-  <style>
-    #banner { width: 600px; height: 75px; }
-  </style>
 </head>
 <body>
 
