--- a/src/main/resources/templates/symbols.html
+++ b/src/main/resources/templates/symbols.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout :: page(~{::main})}">
-<main>
+<main id="symbols">
   <section>
     <h1>Simboli korpusā</h1>
     <div>
