--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -1,6 +1,22 @@
+:root {
+  --sans-font: "Libertinus Sans", sans-serif;
+  --mono-font: 'Libertinus Mono', monospace;
+  --bg-color: #EEFFBB;
+  --text-bg-color: #CCFF99;
+  --button-bg-color: #D1E0C1;
+  --gray-text-color: #606060;
+  --header-bg-green: #669933;
+  --middark-green-text: #283D14;
+  --darkest-green-text: #141E0A;
+}
+
+#banner {
+    width: 600px;
+    height: 75px;
+}
+
 html {
-    --bgcolor: #EEFFBB;
-    background: var(--bgcolor);
+    background: var(--bg-color);
     font-family: "Libertinus Serif", serif;
     font-size: 14pt;
 }
@@ -24,7 +40,8 @@ td {
 }
 
 section {
-    background-color: #CCFF99;
+    background-color: var(--text-bg-color);
+    padding-bottom: 1rem;
 
     & > div, & > table, & > nav {
         padding: 0.8rem;
@@ -32,63 +49,52 @@ section {
 
     & h1 {
         font-size: 160%;
-        font-family: "Libertinus Sans", sans-serif;
-        background-color: #669933;
+        font-family: var(--sans-font);
+        background-color: var(--header-bg-green);
         margin: 0;
-        color: var(--bgcolor);
+        color: var(--bg-color);
         padding: 5px 10px;
     }
 }
 
+main:not(#book, #symbols) section {
+    margin-left: 7%;
+    & h1 {
+        margin: 0 0 0 -7%;
+    }
+}
+
 a {
-  color: #283d14;
+    color: var(--middark-green-text);
+    &:visited {
+        color: var(--darkest-green-text);
+    }
 }
 
-a:visited {
-  color: #141e0a;
-}
-
-
-.address {
-    font-family: "Libertinus Sans", sans-serif;
-    font-stretch: condensed;
-}
-
-.extra-small
+button, input, select
 {
-    font-size:75%;
+    background-color: var(--button-bg-color);
+    border-color: var(--darkest-green-text);
+    border-width: 1px;
+    padding: 3px;
+}
+
+strong
+{
+    font-family: var(--sans-font);
+    color: var(--darkest-green-text);
 }
 
 footer
 {
-    color: #606060;
+    color: var(--gray-text-color);
     text-align: center;
     font-size: 90%;
     padding-top: 1em;
     padding-bottom: 1em;
 }
 
-td.index-booksep
-{
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-}
-
-section.hanging-page
-{
-    margin-left: 7%;
-    padding-bottom: 1em;
-    & h1 {
-        margin: 0 0 0 -7%;
-    }
-    & div ul {
-        list-style-type: none;
-        padding: 0;
-    }
-}
-
-strong
-{
-    font-family: "Libertinus Sans", sans-serif;
-    color: #141e0a;
+.address {
+    font-family: var(--sans-font);
+    font-stretch: condensed;
 }
