First-page link to an English overview.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,8 +44,9 @@
     <div>
       <ul>
         <li>
-          <strong>NKK</strong>:
-          <a href="https://korpuss.lv/id/Senie" target="_blank">korpusa ieraksts</a>.
+          <strong>NKK</strong>: korpusa ieraksts
+          <a href="https://korpuss.lv/id/Senie" target="_blank">latviski</a>
+          (<a href="https://korpuss.lv/en/id/Senie" target="_blank">English</a>).
         </li>
         <li>
           <strong>Meklēšana korpusā</strong>:
