New Clarin link.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,8 +54,7 @@
         </li>
         <li>
           <strong>Datu lejuplāde</strong>:
-          <a href="http://hdl.handle.net/20.500.12574/90" target="_blank">CLARIN-LV repozitorijā</a>.
-          <!-- TODO: atjaunināt, tiklīdz būs šī gada saite! -->
+          <a href="http://hdl.handle.net/20.500.12574/141" target="_blank">CLARIN-LV repozitorijā</a> (2025-11-20).
         </li>
         <li>
           <strong>Izmantoto simbolu saraksti</strong>: <a href="/symbols">pamata</a>,
@@ -63,6 +62,9 @@
         </li>
         <li>
           <strong>Saziņa</strong>: <a href="mailto:senie@korpuss.lv">senie@korpuss.lv</a>.
+        </li>
+        <li>
+          Dati mājaslapā un NKK atjaunināti 2025-11-20.
         </li>
       </ul>
     </div>
