Goto: Implement go-to address.

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -57,7 +57,13 @@
       <div id="pageContent">
         <table>
           <tr th:each="line : ${lines}">
-            <td th:text="${line.address}" class="address">Ab1234_BC_--_1</td>
+            <td class="address">
+              <a
+                th:id="${line.address}"
+                th:href="|/goto?address=${line.address}"
+                th:text="${line.address}"
+              >Ab1234_BC_--_1</a>
+            </td>
             <td>[(${line.dataHtml})]</td>
           </tr>
         </table>
