--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -18,10 +18,12 @@
             padding-right: 0.4rem;
         }
         & > div {
-            & > img {
+            & > a img {
                 width: 100%;
                 height: 100%;
                 max-height: 720px;
+                min-height: 30px;
+                min-width: 30px;
             }
         }
 
