--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -17,6 +17,9 @@
         & td {
             padding-right: 0.4rem;
         }
+        & .address a {
+            text-decoration: none;
+        }
         & > div {
             & > a img {
                 width: 100%;
