`translate="no"` to hopefully prevent autotranslators ruining the source text and IDs.

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -54,7 +54,7 @@
       </nav>
 
       <!-- Page content -->
-      <div id="pageContent">
+      <div id="pageContent" translate="no">
         <table>
           <tr th:each="line : ${lines}">
             <td class="address">
