--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,8 +73,8 @@
     <h1><span th:text="${century.key}">99</span>. gadsimts</h1>
     <table>
       <tr th:each="book: ${century.value}">
-        <td class="address"><a href="/books/Ab1234_BC" th:href="${book.urlPath}" th:text="${book.displayCode}">Ab1234_BC</a></td>
-        <td class="booksep">—</td>
+        <td class="address" translate="no"><a href="/books/Ab1234_BC" th:href="${book.urlPath}" th:text="${book.displayCode}">Ab1234_BC</a></td>
+        <td class="booksep" translate="no">—</td>
         <td th:text="${book.name}">Valpurģu nakts</td>
       </tr>
     </table>
