--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,6 +53,13 @@
           <a href="https://nosketch.korpuss.lv/#dashboard?corpname=senie_unicode" target="_blank">šeit</a>.
         </li>
         <li>
+          <form action="/goto">
+            <label><strong>Iet uz adresi avotā</strong>:</label>
+            <input type="text" name="address"/>
+            <button type="submit">Meklēt!</button>
+          </form>
+        </li>
+        <li>
           <strong>Datu lejuplāde</strong>:
           <a href="http://hdl.handle.net/20.500.12574/141" target="_blank">CLARIN-LV repozitorijā</a> (2025-11-20).
         </li>
