--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -2,8 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout :: page(~{::main})}">
 <main id="book">
   <section>
-    <h1 th:text="${pageTitle}">Grāmata (Ab1234_CD)</h1>
-    <p><a href="/biblio/Ab1234_BC" th:href="|/biblio/${currentBook.fullSource}">Bibliogrāfija</a></p>
+    <h1>
+      <span th:text="${pageTitle}">Grāmata (Ab1234_CD)</span>
+      <a href="/biblio/Ab1234_BC" th:href="|/biblio/${currentBook.fullSource}">Bibliogrāfija</a>
+    </h1>
     <div class="page-nav">
       <!-- List of books (only for collections) -->
       <nav class="books" th:if="${collection} != null">
