Input field gets focus when label clicked.
Co-authored-by: martins-spektors <martins.spektors@mobilly.lv>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,8 +54,8 @@
         </li>
         <li>
           <form action="/goto">
-            <label><strong>Iet uz adresi avotā</strong>:</label>
-            <input type="text" name="address"/>
+            <label for="gotoAddressInput"><strong>Iet uz adresi avotā</strong>:</label>
+            <input id="gotoAddressInput" type="text" name="address"/>
             <button type="submit">Meklēt!</button>
           </form>
         </li>
