--- a/src/main/resources/static/css/page.css
+++ b/src/main/resources/static/css/page.css
@@ -47,7 +47,7 @@ section {
         padding: 0.8rem;
     }
 
-    & h1 {
+    h1 {
         font-size: 160%;
         font-family: var(--sans-font);
         background-color: var(--header-bg-green);
@@ -59,7 +59,7 @@ section {
 
 main:not(#book, #symbols) section {
     margin-left: 7%;
-    & h1 {
+    h1 {
         margin: 0 0 0 -7%;
     }
 }
