Switched the navigation panels in the bottom of the book page view.

--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -3,6 +3,11 @@
         display: flex;
     }
 
+    nav + nav {
+        margin-top: 0.25rem;
+        margin-bottom: 0.25rem;
+    }
+
     form.books, form.pages, #pageContent {
         white-space: nowrap;
     }
